--- a/src/App.css
+++ b/src/App.css
@@ -86,13 +86,13 @@ Text font :     font-family: 'Lato', sans-serif; */
 
 
 body {
-  background-image: url(./assets/1875.jpg) no-repeat center fixed;
-  background-size: cover;
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
-  overflow: visible;
+  overflow: hidden;
   z-index: 1;
-  color: #fefdff;
+  color: #1E1014;
+  background-color: #1E1014;/*Fixes background color durrrr */
+
 }
 
 .App {
@@ -102,7 +102,7 @@ body {
 .App-header {
   position: relative;
   min-height: 100vh;
-  color: #fafafa;
+  color: #722424;
   background-color: var(--background);
 }
 
